# az-table-catalog

./: .gitignore  README.md  pyproject.toml
src/az_table_catalog/: __init__.py  az_table_catalog.py
